--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.jsf12.classpath}:\
-    ${libs.jsf20.classpath}
+    ${libs.jsf20.classpath}:\
+    ${libs.jaxb.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -79,6 +80,7 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
